<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.pacia.ptms.activity.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_head" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="@dimen/size_25dp">

        <EditText
            android:id="@+id/et_login_user"
            style="@style/Et_Login_Style"
            android:layout_marginBottom="@dimen/size_20dp"
            android:drawableLeft="@drawable/ic_login"
            android:hint="@string/input_user"
            android:padding="@dimen/size_10dp" />

        <EditText
            android:id="@+id/et_login_pw"
            style="@style/Et_Login_Style"
            android:layout_marginBottom="@dimen/size_20dp"
            android:drawableLeft="@drawable/ic_pw"
            android:hint="@string/input_pw"
            android:inputType="textPassword"
            android:padding="@dimen/size_10dp" />

        <Spinner
            android:id="@+id/spinner_login_role"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginBottom="@dimen/size_20dp"
            android:background="@drawable/spinner_drop_bg"
            android:dropDownVerticalOffset="@dimen/size_40dp"
            android:entries="@array/user_role_type" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:layout_marginBottom="@dimen/size_20dp"
            android:background="@drawable/shape_solid_green_5dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/tv_14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forget_pw"
                style="@style/Base_WH_Wrap"
                android:text="@string/forget_pw"
                android:textColor="@color/color_green"
                android:textSize="@dimen/tv_14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
